Revision history for {{ $dist->name }}

{{$NEXT}}
  [Enhancements]
  - Removed Ref::Util from dependencies, but added Type::Tiny::XS as recommended.

  [Documentation]
  - Added missing note to Changes.

v0.1.0    2022-04-03 13:26:16+01:00 Europe/London
  - Initial version released.